CalDAV: Zimbra has incorrect OPTIONS response for shared calendars
When I use Evolution to create a CardDAV/CalDAV collection account for my employer's Zimbra groupware server, all the different calendars are detected and shown in the user interface, but only my primary personal calendar actually works, all the other ones (typically calendars shared with me) yield the error message «Given URL "…" doesn't reference CalDAV calendar» as shown in the screenshot below (with some calendars named after colleagues blacked out):
Pressing the Reconnect button doesn't really do anything useful, I just get the same error message for a different calendar.
There are also pop-ups appearing that ask for the password for each one of the defective calendars, even though it was given in the wizard for adding a collection account.
I have log from CALDAV_DEBUG=all evolution-calendar-factory -w
, but since it it contains all of my calendar events, I do not want to make it publicly available. If there is a way to get a debug log that does not contain actual calendar events or other personal information, then I would be happy to create and upload such a log file, or I could send the log I have directly to a developer for analysis.