I#221 - CalDAV: Zimbra has incorrect OPTIONS response for shared calendars

Closes https://gitlab.gnome.org/GNOME/evolution-data-server/-/issues/221